# gestor-dispositivos-iot

./: .gitignore  README.md  alembic.ini  database_dump.sql  pyproject.toml
alembic/: env.py
alembic/versions/: initial_schema.py  schema_modifications.py
app/: crud.py  database.py  main.py  models.py
