[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iot-device-manager"
version = "0.1.0"
description = "IoT Device Management System with SQLAlchemy and Alembic"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]